--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,8 @@ title: Budiman JoJo
 baseURL: https://budimanjojo.com
 theme: bilberry-hugo-theme
 enableRobotsTXT: true
+permalinks:
+  article: /:year/:month/:day/:title/
 
 # Language
 defaultContentLanguage: en
