feat(git): change submodule branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "themes/bilberry-hugo-theme"]
 	path = themes/bilberry-hugo-theme
 	url = git@github.com:Lednerb/bilberry-hugo-theme.git
+	update = rebase
+	branch = master
